[package]
name                  = "ana_crypto"
authors.workspace     = true
description.workspace = true
version.workspace     = true
homepage.workspace    = true
repository.workspace  = true
readme.workspace      = true
categories.workspace  = true
keywords.workspace    = true
license.workspace     = true
edition.workspace     = true

[dependencies]
ed25519-dalek.workspace = true
rand.workspace          = true
sha2.workspace          = true

[lints]
workspace = true
